--- a/Euler605Solution.ipynb
+++ b/Euler605Solution.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 253,
    "metadata": {
     "collapsed": true
    },
@@ -629,9 +629,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 254,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The answer to Problem 605 is  59992576\n"
+     ]
+    }
+   ],
    "source": [
     "n = 10 ** 8 + 7\n",
     "k = 10 ** 4 + 7\n",
