--- a/Euler605Solution.ipynb
+++ b/Euler605Solution.ipynb
@@ -409,7 +409,7 @@
     "   <br />\n",
     "   $$=\\frac{n}{2 * (2^{n}-1)}*\\frac{2^n}{2^n-1}$$\n",
     "   <br />\n",
-    "   $$=\\frac{2^{n-1}n}{(2^{n}-1)^2}$$\n",
+    "   $$=\\frac{2^{n-1}*n}{(2^{n}-1)^2}$$\n",
     "\n",
     "<br />\n",
     "\n",
