--- a/Euler605Solution.ipynb
+++ b/Euler605Solution.ipynb
@@ -55,7 +55,7 @@
     "* C<sub>i</sub>: The win state\n",
     "\n",
     "\n",
-    "The transition matrix dimension is therefore 3n by 3n\n",
+    "The transition matrix size is therefore 3n by 3n\n",
     "\n",
     "**The transition probabilities are: **\n",
     "+ A<sub>i</sub> --> C<sub>i</sub> = 0.5\n",
