--- a/Euler605Solution.ipynb
+++ b/Euler605Solution.ipynb
@@ -309,15 +309,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='green'>**State A<sub>i</sub> Conclusions:**</font>\n",
+    "**State A<sub>i</sub> Conclusions:**\n",
     "\n",
-    "1. <font color='red'>**If at any point you end up in state A<sub>i</sub> for any i, you can never get to B<sub>i</sub> for all *i*. **</font>\n",
+    "1. **If at any point you end up in state A<sub>i</sub> for any i, you can never get to B<sub>i</sub> for all *i*. **\n",
     "  In state A<sub>i</sub> , Player i has already won one round.  If he wins again (the condition that would otherwise put Player [ ( i+1 ) mod n ] in state B<sub>(i+1) mod n</sub> ), the game would end with Player i as the winner. If instead, Player i loses, Player  [ ( i+1 ) mod n ]  enters state A<sub>(i+1) mod n</sub> making it impossible to achieve state B<sub>(i+2) mod n</sub> by the same logic (and so forth for all subsequent rounds).\n",
     "    \n",
-    "2. <font color='red'>**If you are in state A<sub>i</sub>, the probablity of returning to state A<sub>i</sub> after one full cycle through the players is (1/2)^n.**</font>\n",
+    "2. **If you are in state A<sub>i</sub>, the probablity of returning to state A<sub>i</sub> after one full cycle through the players is (1/2)^n.**\n",
     "    Starting in A<sub>i</sub>, there is only one sequence that gets you all the way back around to A<sub>i</sub> which is an n-length sequence of a loss for i, a loss for i + 1, a loss for i + 2, etc.  If anything else happens along the way, the game will end.\n",
     "\n",
-    "3. <font color='red'>**If you are in state A<sub>i</sub>, there is a 1/2 chance that Player i wins during the next round**</font>\n",
+    "3. **If you are in state A<sub>i</sub>, there is a 1/2 chance that Player i wins during the next round**\n",
     "\n",
     "**Putting (1), (2) and (3) together, once in state A<sub>i</sub>, the chance Player i wins the game is:**\n",
     "    \n",
@@ -387,15 +387,15 @@
    "source": [
     "   \n",
     "<br />\n",
-    "<font color='green'>**State B<sub>i</sub> Conclusions:**</font>\n",
+    "**State B<sub>i</sub> Conclusions:**\n",
     "\n",
-    "1. <font color='red'>**If you are in state B<sub>i</sub>, the probablity of returning to state B<sub>i</sub> after one full cycle through the players is (1/2)^n.**</font>\n",
+    "1. **If you are in state B<sub>i</sub>, the probablity of returning to state B<sub>i</sub> after one full cycle through the players is (1/2)^n.**\n",
     "    As per (3) above, if you enter state A for any player, you cannot get back to state B for all players.  Therefore, no player can win their first round and and there is only one path that gets you back to B<sub>i</sub>.  That path is a win for player i (to state B<sub>(i+1) mod n</sub>), a win for player i + 1 (to state B<sub>(i+2) mod n</sub>), ... back to B<sub>i</sub>.\n",
     "    \n",
-    "2. <font color='red'>**If you are in state B<sub>i</sub>, the probablity of returning to state A<sub>i</sub> after one full cycle through the players is n *(1/2)^n.**</font>\n",
+    "2. **If you are in state B<sub>i</sub>, the probablity of returning to state A<sub>i</sub> after one full cycle through the players is n *(1/2)^n.**\n",
     "   From (2) above, if you reach state A for any player, there is subsequently only one path to reach A<sub>i</sub>.  We can create n unique paths (one for each player) where we stay in state B until B<sub>j</sub> transitions to A<sub>(j+1) mod n</sub> before ultimately returning to A<sub>i</sub></font>\n",
     "\n",
-    "3. <font color='red'>**If you are in state B<sub>i</sub>, you cannot reach C<sub>i</sub> after the next round**</font>\n",
+    "3. **If you are in state B<sub>i</sub>, you cannot reach C<sub>i</sub> after the next round**\n",
     "\n",
     "**Putting (1), (2) and (3) together, once in state B<sub>i</sub>, the chance Player i wins the game is:**\n",
     "\n",
@@ -409,7 +409,7 @@
     "   <br />\n",
     "   $$=\\frac{n}{2 * (2^{n}-1)}*\\frac{2^n}{2^n-1}$$\n",
     "   <br />\n",
-    "   $$=\\frac{2^{n-1}*n}{(2^{n}-1)^2}$$\n",
+    "   $$=\\frac{2^{n-1}n}{(2^{n}-1)^2}$$\n",
     "\n",
     "<br />\n",
     "\n",
@@ -479,9 +479,9 @@
    "source": [
     "We start the game in B<sub>0</sub>, so for player k, we just need to figure out the probability to go from B<sub>0</sub> to A<sub>k</sub> and the probability to go from B<sub>0</sub> to B<sub>k</sub> and then we can multiply by P<sub>n</sub>(k Wins from A<sub>k</sub>) and P<sub>n</sub>(k Wins from B<sub>k</sub>), respectively, and sum to get the complete formula.\n",
     "\n",
-    "1. <font color='red'>**If you are in state B<sub>0</sub>, the probablity of reaching state B<sub>k</sub> is (1/2)^(k-1).**</font> You can think of this as a reduced version of (1) from the prior section where the cycle is length k instead of length n <sub>i</sub>.\n",
+    "1. **If you are in state B<sub>0</sub>, the probablity of reaching state B<sub>k</sub> is (1/2)^(k-1).** You can think of this as a reduced version of (1) from the prior section where the cycle is length k instead of length n <sub>i</sub>.\n",
     "    \n",
-    "2. <font color='red'>**If you are in state B<sub>0</sub>, the probablity of returning to state A<sub>0</sub> after one full cycle through the players is (k-1)*(1/2)^(k-1).**</font> You can think of this as a reduced version of (2) from the prior section where the cycle is length k instead of length n <sub>i</sub>."
+    "2. **If you are in state B<sub>0</sub>, the probablity of returning to state A<sub>0</sub> after one full cycle through the players is (k-1)*(1/2)^(k-1).** You can think of this as a reduced version of (2) from the prior section where the cycle is length k instead of length n <sub>i</sub>."
    ]
   },
   {
@@ -595,7 +595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we need to evaluate P<sub>n</sub>(k) with k = 10^4 + 7 and n = 10^8 + 7 and get the last 8 digits of the product of the reduced numerator and denominator! Initially, I tried plugging it into my function from above to get the reduced fraction, but unsurprisingly it hit an overflow error quickly.  There may be a way to loosen the overflow constraints, but I figured I could come up with something better.  Effectively, if we only need the last 8 digits on the product of the numerator and denominator, for each sub-term in P<sub>n</sub>(k), we really only need to track the last 8 digits.  So to start I made this function to calculate the last 8 digits of 2^n by truncating the number any time the length went above 8 (since that won't effect the last 8 digits).  It's not lightning fast, but it was able to calculate the last 8 digits of the large terms in a reasonable amount of time.  Since those were the only terms likely to cause problems, there wasn't a real need to truncate the other terms until the very end. \n",
+    "Now we need to evaluate P<sub>n</sub>(k) this k = 10^4 + 7 and n = 10^7 + 1 and get the last 8 digits of the product of the reduced numerator and denominator! Initially, I tried plugging it into my function from above to get the reduced fraction, but unsurprisingly it hit an overflow error quickly.  There may be a way to loosen the overflow constraints, but I figured I could come up with something better.  Effectively, if we only need the last 8 digits on the product of the numerator and denominator, for each sub-term in P<sub>n</sub>(k), we really only need to track the last 8 digits.  So to start I made this function to calculate the last 8 digits of 2^n by truncating the number any time the length went above 8 (since that won't effect the last 8 digits).  It's not lightning fast, but it was able to calculate the last 8 digits of the large terms in a reasonable amount of time.  Since those were the only terms likely to cause problems, there wasn't a real need to truncate the other terms until the very end. \n",
     "\n"
    ]
   },
@@ -624,7 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>***LEAP OF FAITH/LUCK - I assumed/hoped that the numerator and denominator would be coprime.  That assumption proved true since I got the right answer, but I still need to come up with the math to show it!!!***</font> "
+    "***LEAP OF FAITH/LUCK - I assumed/hoped that the numerator and denominator would be coprime.  That assumption proved true since I got the right answer, but I still need to come up with the math to show it!!!***"
    ]
   },
   {
