--- a/Euler605Solution.ipynb
+++ b/Euler605Solution.ipynb
@@ -59,9 +59,9 @@
     "\n",
     "**The transition probabilities are: **\n",
     "+ A<sub>i</sub> --> C<sub>i</sub> = 0.5\n",
-    "+ A<sub>i</sub> --> A<sub>(i + 1)mod *n* </sub> = 0.5\n",
-    "+ B<sub>i</sub> --> A<sub>(i + 1)mod *n* </sub> = 0.5\n",
-    "+ B<sub>i</sub> --> B<sub>(i + 1)mod *n* </sub> = 0.5\n",
+    "+ A<sub>i</sub> --> A<sub>(i + 1)mod n </sub> = 0.5\n",
+    "+ B<sub>i</sub> --> A<sub>(i + 1)mod n </sub> = 0.5\n",
+    "+ B<sub>i</sub> --> B<sub>(i + 1)mod n </sub> = 0.5\n",
     "+ C<sub>i</sub> --> C<sub>i</sub> = 1.0\n",
     "\n",
     "**Finally, the starting node is B<sub>0</sub>**\n"
