--- a/Euler605Solution.ipynb
+++ b/Euler605Solution.ipynb
@@ -393,7 +393,7 @@
     "    As per (3) above, if you enter state A for any player, you cannot get back to state B for all players.  Therefore, no player can win their first round and and there is only one path that gets you back to B<sub>i</sub>.  That path is a win for player i (to state B<sub>(i+1) mod n</sub>), a win for player i + 1 (to state B<sub>(i+2) mod n</sub>), ... back to B<sub>i</sub>.\n",
     "    \n",
     "2. **If you are in state B<sub>i</sub>, the probablity of returning to state A<sub>i</sub> after one full cycle through the players is n *(1/2)^n.**\n",
-    "   From (2) above, if you reach state A for any player, there is subsequently only one path to reach A<sub>i</sub>.  We can create n unique paths (one for each player) where we stay in state B until B<sub>j</sub> transitions to A<sub>(j+1) mod n</sub> before ultimately returning to A<sub>i</sub></font>\n",
+    "   From (2) above, if you reach state A for any player, there is subsequently only one path to reach A<sub>i</sub>.  We can create n unique paths (one for each player) where we stay in state B until B<sub>j</sub> transitions to A<sub>(j+1) mod n</sub> before ultimately returning to A<sub>i</sub>\n",
     "\n",
     "3. **If you are in state B<sub>i</sub>, you cannot reach C<sub>i</sub> after the next round**\n",
     "\n",
