--- a/Euler605Solution.ipynb
+++ b/Euler605Solution.ipynb
@@ -479,9 +479,9 @@
    "source": [
     "We start the game in B<sub>0</sub>, so for player k, we just need to figure out the probability to go from B<sub>0</sub> to A<sub>k</sub> and the probability to go from B<sub>0</sub> to B<sub>k</sub> and then we can multiply by P<sub>n</sub>(k Wins from A<sub>k</sub>) and P<sub>n</sub>(k Wins from B<sub>k</sub>), respectively, and sum to get the complete formula.\n",
     "\n",
-    "1. **If you are in state B<sub>0</sub>, the probablity of reaching state B<sub>k</sub> is (1/2)^(k-1).** You can think of this as a reduced version of (1) from the prior section where the cycle is length (k - 1) instead of length n <sub>i</sub>.\n",
+    "1. **If you are in state B<sub>0</sub>, the probablity of reaching state B<sub>k</sub> is (1/2)^(k-1).** You can think of this as a reduced version of (1) from the prior section where the cycle is length (k - 1) instead of length n.\n",
     "    \n",
-    "2. **If you are in state B<sub>0</sub>, the probablity of returning to state A<sub>0</sub> after one full cycle through the players is (k-1)*(1/2)^(k-1).** You can think of this as a reduced version of (2) from the prior section where the cycle is length (k - 1) instead of length n <sub>i</sub>."
+    "2. **If you are in state B<sub>0</sub>, the probablity of returning to state A<sub>0</sub> after one full cycle through the players is (k-1)*(1/2)^(k-1).** You can think of this as a reduced version of (2) from the prior section where the cycle is length (k - 1) instead of length n."
    ]
   },
   {
